zeit.archive changes
====================

0.4 (unreleased)
================

- Jede erschienene Ausgabe in der Jahresübersichtsseite enthält nun auch
  dann einen Container, wenn noch keine Seite 1 veröffentlicht wurde.


0.3 (2009-08-31)
================

- Rekursive Indizierung alter Ausgaben neu geschrieben.

- Der Archiv-Index muss eine Centerpage sein. Ist sie das nicht, wird das
  Objekt überschrieben (#6123).


0.2 (2009-08-21)
================

- Jahresindex für Print-Archivseiten hinzugefügt.

- Layout für Printarchivseiten in Volume und Year unterteilt.


0.1 (2009-07-29)
================

- first release.